--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"src/**/*.js\" \"models/**/*.js\" \"migrations/**/*.js\"",
+    "format": "prettier --write \"src/**/*.js\" \"models/**/*.js\" \"migrations/**/*.js\" \"seeders/**/*.js\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
